--- a/src/production/color.css
+++ b/src/production/color.css
@@ -1,4 +1,8 @@
 :root{
+            /* ********Header colors******* */
     --header-bg-color: rgb(129, 228, 84);
     --footer-bg-color: whitesmoke;
+    --header-btn-color: rgb(77, 77, 77);
+    --header-search-border: rgb(160, 157, 157);
+    --header-search-bg-color: whitesmoke;
 }
