--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,11 +1,11 @@
 .footer {
   position: fixed;
-  left: 0;
+  /* left: 0; */
   bottom: 0;
   width: 100%;
   text-align: center;
   background-color: #00616433;
-  border: 1px solid #ab47bc;
+  border-top: 1px solid #ab47bc;
   color: white;
   padding: 20px;
 }
